@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Wed Feb 09 10:46:05 CET 2011
-app.grails.version=1.3.6
+#Fri Apr 29 11:47:36 CEST 2011
+app.grails.version=1.3.7
 app.name=mongodb-morphia
 app.version=0.7.2
-plugins.hibernate=1.3.6
-plugins.tomcat=1.3.6
+plugins.hibernate=1.3.7
+plugins.tomcat=1.3.7
