@@ -16,6 +16,7 @@ class Task {
   Date completionDate
   Integer estimatedHours
   Integer actualHours
+  Boolean incomplete // if null, it is not stored in db
 
   String description
 
@@ -29,6 +30,7 @@ class Task {
   static indexes = {
     idx_date unique:true, dropDups:true, fields:[asc('dateCreated'), desc('lastUpdated')]
     idx_project fields:[desc('projectId'), 'startDate'] // if direction is omitted, asc is default
+    idx_incomplete sparse:true, fields:['incomplete'] // try sparse index
   }
 
   static constraints = {
@@ -39,6 +41,7 @@ class Task {
     estimatedHours nullable: true
     startDate nullable: true
     completionDate nullable: true
+    incomplete nullable: true
   }
 
   def beforeSave = {
